# hc-backend

./: .env  .gitignore  Cargo.toml  README.md  create_db.sql  go.mod  main.go  test.html
db/: db.go
endpoints/: endpoints.go  saves.go
models/: save.go
src/: db.rs  error.rs  main.rs  res.rs
src/models/: files.rs  mod.rs  note_categories.rs  notes.rs  res.rs  saves.rs
src/routes/: files.rs  mod.rs  multipart.rs  note_categories.rs  notes.rs  saves.rs
