[package]
name = "hc-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono", "macros" ] }
chrono = { version = "0.4.31", features = [ "serde" ] }
dotenvy = "0.15.7"

[profile.dev.package.sqlx-macros]
opt-level = 3
