[package]
name = "hc-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6", features = ["multipart"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono", "macros" ] }
chrono = { version = "0.4.31", features = [ "serde" ] }
dotenvy = "0.15.7"
tower-http = { version = "0.4.0", features = ["limit", "cors"] }
uuid = { version =  "1.4.1", features = ["v4", "fast-rng"] }
